mobile testimonial blockquote fix color contrast

--- a/style/_section slider.scss
+++ b/style/_section slider.scss
@@ -27,8 +27,8 @@
             font-weight: 700;
         }
 
-        p {
-            color: $dark-grayish-blue;
+        blockquote {
+            color: #53576A;
         }
 
         animation: fade 1s;
